fixing carousel word wrap

--- a/static/css/mandy-business-casual.css
+++ b/static/css/mandy-business-casual.css
@@ -152,10 +152,10 @@ a:active {
     color: #777;
 }
 
-.brand-carousel {
+/*.brand-carousel {
     min-width: 512px;
     overflow: scroll;
-}
+}*/
 /*Upcoming events*/
 .events {
     border: 4px solid black;
